--- a/links-and-images/misc/extras.html
+++ b/links-and-images/misc/extras.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Extras</h1>
 
-        <P>This page is about miscellaneous HTML things, but you may also be interested in <a href="links.html">links</a> or <a href="../images.html">images</a></P>
+        <P>This page is about miscellaneous HTML things, but you may also be interested in <a href="../links.html">links</a> or <a href="../images.html">images</a></P>
 
         <h2>Character Sets</h2>
 
